--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -1,11 +1,9 @@
 .intro{
     height: calc(100vh - 4rem);
     width: 100vw;
-    
     margin: 0 auto;
     overflow: hidden;
     position: relative;
-
 }
 
 .bg{
@@ -26,7 +24,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
 }
 
 .hello{
@@ -42,7 +39,6 @@
     font-size: medium;
     font-weight: 300;
     letter-spacing: 1px;
-
 }
 
 .btn{
@@ -52,13 +48,11 @@
     margin: 0.75rem;
     padding: 0.75rem 0.75rem;
     color: #191f36;
-
 }
 
 .btn:hover{
     transform: scale(1.02);
-    
-    text-shadow:0 0 1rem #53B2F4 ;
+    text-shadow: 0 0 1rem #53B2F4;
 }
 
 .sclIcon a{
@@ -68,21 +62,19 @@
     color: #53B2F4;
     display: inline-block;
     transition: 0.5s ease;
-    
 }
 
 .sclIcon a i:hover{
-    transform:scale(1.2);
-    text-shadow:0 0 1rem #53B2F4 ;
-    
-    
+    transform: scale(1.2);
+    text-shadow: 0 0 1rem #53B2F4;
 }
 
-
-
-@media screen and (max-width:480px) {
-    .bg{
-        right:-20vw
+@media screen and (max-width: 480px) {
+    .bg {
+        right: -20vw;
     }
-    
+    .introContent {
+        color: #ffffff; /* Add a suitable color for text on image */
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Add text shadow for better readability */
+    }
 }
